--- a/app/views/orders/_labors.html.erb
+++ b/app/views/orders/_labors.html.erb
@@ -4,7 +4,7 @@
     <table id="editlabors">
       <thead>
       <tr>
-        <th id="quantity">Qty</th>
+        <th id="quantity">Quantity</th>
         <th id="labor">Item</th>
         <th></th>
       </tr>
