--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,4 +1,8 @@
-<h2>Edit Order</h2>
+<div id="order_page_title">
+  <h2>Edit Order</h2>
+</div>
+
+<p class="clearboth"></p>
 
 <%= render 'edit_form' %>
 
