--- a/app/views/work_orders/edit.html.erb
+++ b/app/views/work_orders/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>Editing work_order</h1>
-
+<div  id="work_order_page_title">
+  <h2>Edit Work Order</h2>
+</div>
 <%= render 'form' %>
 
 <%= link_to 'Show', @work_order %> |
