--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require jquery.ui.autocomplete
  *= require_tree .
  */
+
+h1, h2, h3, h4, h5, div {
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-top: 10px;
+    padding-right: 0;
+    padding-bottom: 5px;
+    padding-left: 0;
+}
