--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Edit contact</h1>
+<h1>Edit <%= @contact.name %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @contact %> |
-<%= link_to 'Back', contacts_path %>
+<%= link_to 'Back', customer_path(@contact.customer) %>
