--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,9 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @customer.name %><br />
-</p>
+
+  <h2><%= @customer.name %></h2>
 
 
   <h3>Contacts</h3>
@@ -13,6 +11,7 @@
     <th align="left">Name</th>
     <th align="left">Telephone</th>
     <th align="left">Email</th>
+    <th align="left"></th>
     </thead>
     <tbody class="items">
     <% @customer.contacts.each do |contact| %>
@@ -21,13 +20,14 @@
         <td><%= link_to contact.name, contact %></td>
         <td><%= contact.telephone %>
         <td><%= contact.email %></td>
+        <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
       </tr>
     <% end %>
     </tbody>
   </table>
 
   <% @customer.orders.each do |order| %>
-    <p><%= link_to order.order_number, order %>, <%= order.description %></p>
+    <p><%= generate_order_number_with_links(order) %>, <%= truncate(order.description, length: 100) %></p>
   <% end %>
 
 <%= link_to 'Edit', edit_customer_path(@customer) %> |
