--- a/app/views/orders/_edit_form.html.erb
+++ b/app/views/orders/_edit_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div id="ordervitals">
+  <div id="order_vitals_edit">
     <div class="field">
-      <p><strong>Customer:</strong> <%= @order.customer.name %></p>
+      <b><%= f.label :customer %>: <%= @order.customer.name %></b>
     </div>
 
     <div class="field">
-      <p><strong>Order: <%= @order.order_number %></strong></p>
+      <b><%= f.label :order %>: <%= @order.order_number %></b>
     </div>
   </div>
 
-  <div id="orderdates">
+  <div id="order_dates">
     <div class="field">
       <b><%= f.label :completion_date %></b>
       <%= f.text_field :completion_date, :value => date_mdY(@order.completion_date), :class => 'datepicker', style: "text-align: right" %>
@@ -34,19 +34,22 @@
   </div>
 
   <p class="clearboth"></p>
+
+  <div id="edit_description">
     <div class="field">
-      <b><%= f.label :description %></b>
+      <b><%= f.label :description, style: "vertical-align: top;" %></b>
       <%= f.text_area :description, cols: 60, rows: 2 %>
     </div>
+  </div>
 
 
-  <div id="order_drop_downs">
-    <div id="materialsvendors">
+  <div id="order_drop_down_edits">
+    <div id="materials_and_vendors_edit">
       <%= render :partial => "materials", :locals => {:f => f} %>
 
       <%= render :partial => "vendors", :locals => {:f => f} %>
     </div>
-    <div id="laborequipmentals">
+    <div id="labor_and_equipmentals_edit">
       <%= render :partial => "labors", :locals => {:f => f} %>
 
       <%= render :partial => "equipmentals", :locals => {:f => f} %>
