--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New order</h1>
+<div id="order_page_title">
+  <h2>New order</h2>
+</div>
 
-<%= render 'form' %>
+<p class="clearboth"></p>
 
+<div id="order_submission">
+  <%= render 'form' %>
+</div>
 <%= link_to 'Back', orders_path %>
