--- a/app/views/contacts/_contact.html.erb
+++ b/app/views/contacts/_contact.html.erb
@@ -2,6 +2,12 @@
   <%= ff.label :name %>
   <%= ff.text_field :name %>
 
+  <%= ff.label :first_name %>
+  <%= ff.text_field :first_name %>
+
+  <%= ff.label :last_name %>
+  <%= ff.text_field :last_name %>
+
   <%= ff.label :telephone %>
   <%= ff.text_field :telephone %>
 
