--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name %>
+  </div>
+  <div class="field">
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
+  </div>
+  <div class="field">
     <%= f.label :telephone %><br>
     <%= f.text_field :telephone %>
   </div>
