--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -126,9 +126,10 @@ div#quantity_and_description {
     width: 10%;
   }
   div#description {
-    width: 75%;
+    width: 70%;
     padding-top: 0;
     padding-bottom: 0;
+    padding-right: 5%;
     float: right;
   }
 }
