--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -1,8 +1,15 @@
-<h1>Landing Page</h1>
-<p><%= link_to 'Customers', customers_url %></p>
-<p><%= link_to 'Contacts', contacts_url %></p>
-<p><%= link_to 'Labor', labors_url %></p>
-<p><%= link_to 'Equipment', equipmentals_url %></p>
-<p><%= link_to 'Materials', materials_url %></p>
-<p><%= link_to 'Orders', orders_url %></p>
-<p><%= link_to 'Work Orders', work_orders_url %></p>
+<div style="text-align: center">
+  <h1>Landing Page - Not to Be Confused with a Real Home Page</h1>
+
+  <p><%= link_to 'Customers', customers_url %></p>
+
+  <p><%= link_to 'Orders', orders_url %></p>
+
+  <p><%= link_to 'Work Orders', work_orders_url %></p>
+
+  <p><%= link_to 'Labor', labors_url %></p>
+
+  <p><%= link_to 'Equipment', equipmentals_url %></p>
+
+  <p><%= link_to 'Materials', materials_url %></p>
+</div>
